--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,9 @@ dependencies:
   - scikit-learn
   - matplotlib
   - seaborn
+  - geopandas
+  - resipy
+  - emagpy
   - pip
   - pip:
       - hydrostats
