--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "scipy",
     "pandas",
     "matplotlib",
-    "scikit-learn"; python_version>='3.11'",
+    "scikit-learn"; python_version>='3.11'
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
