--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "pandas",
     "matplotlib",
     "scikit-learn"
-    "typing-dependencies; python_version>='3.11'"
+    "typing_extensions; python_version>='3.11'",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
