--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ dependencies = [
     "scipy",
     "pandas",
     "matplotlib",
-    "scikit-learn"
-    "typing_extensions; python_version<'3.13'",
+    "scikit-learn",
+    "typing_extensions; python_version>='3.11'",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
